--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=projet-gourmetgo
+spring.datasource.url=jdbc:mysql://localhost:3306/gg
+spring.datasource.username=root
+spring.datasource.password=
+# Hibernate properties
+spring.jpa.hibernate.ddl-auto=create
+# Turn off the Spring Boot banner
+spring.main.banner-mode=off
+# Reduce logging level. Set logging level to warn
+logging.level.root=warn
