--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/gg
 spring.datasource.username=root
 spring.datasource.password=
 # Hibernate properties
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 # Turn off the Spring Boot banner
 spring.main.banner-mode=off
 # Reduce logging level. Set logging level to warn
