commit fix page connexion fullstack

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=
 # Turn off the Spring Boot banner
 spring.main.banner-mode=off
 # Hibernate properties
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 # Reduce logging level. Set logging level to warn
 logging.level.root=warn
 
